2006-06-37  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added to ICEDTEA_COPY_DIRS and ICEDTEA_COPY_SRC
	* Makefile.in: Regenerated.
	* jce/gnu/javax/net/ssl/AbstractSessionContext.java,
	jce/gnu/javax/net/ssl/EntropySource.java,
	jce/gnu/javax/net/ssl/NullManagerParameters.java,
	jce/gnu/javax/net/ssl/PreSharedKeyManager.class,
	jce/gnu/javax/net/ssl/PreSharedKeyManager.java,
	jce/gnu/javax/net/ssl/PreSharedKeyManagerParameters.java,
	jce/gnu/javax/net/ssl/PrivateCredentials.java,
	jce/gnu/javax/net/ssl/SRPManagerParameters.java,
	jce/gnu/javax/net/ssl/SRPTrustManager.java,
	jce/gnu/javax/net/ssl/SSLCipherSuite.java,
	jce/gnu/javax/net/ssl/SSLProtocolVersion.java,
	jce/gnu/javax/net/ssl/SSLRecordHandler.java,
	jce/gnu/javax/net/ssl/Session.java,
	jce/gnu/javax/net/ssl/SessionStoreException.java,
	jce/gnu/javax/net/ssl/StaticTrustAnchors.java,
	jce/gnu/javax/net/ssl/provider/AbstractHandshake.java,
	jce/gnu/javax/net/ssl/provider/Alert.java,
	jce/gnu/javax/net/ssl/provider/AlertException.java,
	jce/gnu/javax/net/ssl/provider/Builder.java,
	jce/gnu/javax/net/ssl/provider/Certificate.java,
	jce/gnu/javax/net/ssl/provider/CertificateBuilder.java,
	jce/gnu/javax/net/ssl/provider/CertificateRequest.java,
	jce/gnu/javax/net/ssl/provider/CertificateRequestBuilder.java,
	jce/gnu/javax/net/ssl/provider/CertificateStatusRequest.java,
	jce/gnu/javax/net/ssl/provider/CertificateStatusType.java,
	jce/gnu/javax/net/ssl/provider/CertificateType.java,
	jce/gnu/javax/net/ssl/provider/CertificateURL.java,
	jce/gnu/javax/net/ssl/provider/CertificateVerify.java,
	jce/gnu/javax/net/ssl/provider/CipherAlgorithm.java,
	jce/gnu/javax/net/ssl/provider/CipherSuite.java,
	jce/gnu/javax/net/ssl/provider/CipherSuiteList.java,
	jce/gnu/javax/net/ssl/provider/ClientCertificateTypeList.java,
	jce/gnu/javax/net/ssl/provider/ClientDHE_PSKParameters.java,
	jce/gnu/javax/net/ssl/provider/ClientDiffieHellmanPublic.java,
	jce/gnu/javax/net/ssl/provider/ClientHandshake.java,