@@ -1,30 +1,3 @@
-2007-06-20  Gary Benson  <gbenson@redhat.com>
-
-	* j2se/make/common/shared/Platform.gmk:
-	Add ppc, ppc64, s390 and s390x.
-	* j2se/make/common/shared/Compiler-gcc.gmk: Likewise.
-	* hotspot/make/defs.make: Likewise.
-	* hotspot/build/linux/makefiles/buildtree.make: Likewise.
-	* hotspot/build/linux/makefiles/defs.make: Likewise.
-	* hotspot/build/linux/makefiles/gcc.make: Likewise.
-	* hotspot/src/share/vm/utilities/macros.hpp: Likewise.
-	* hotspot/src/share/vm/runtime/vm_version.cpp: Likewise.
-	* hotspot/src/os/linux/vm/os_linux.cpp: Likewise.
-
-	* hotspot/make/Makefile:
-	Add rules to make interpreter-only builds.
-
-	* control/make/hotspot-rules.gmk:
-	Make interpreter-only builds on platforms without a JIT.
-
-	* hotspot/build/linux/makefiles/sa.make:
-	Don't build Servicability Agent on interpreter-only platforms.
-	* hotspot/build/linux/makefiles/saproc.make: Likewise.
-	* hotspot/build/linux/makefiles/defs.make: Likewise.
-
-	* hotspot/make/Makefile:
-	Correctly locate files to install on interpreter-only platforms.
-
 diff -r 10dfd4e883b1 j2se/make/common/shared/Platform.gmk
 --- openjdk/j2se/make/common/shared/Platform.gmk	Wed May 30 17:05:50 2007 -0400
 +++ openjdk/j2se/make/common/shared/Platform.gmk	Fri Jun 01 11:47:18 2007 +0100
