@@ -1,4 +1,8 @@
-2006-06-37  Lillian Angel  <langel@redhat.com>
+2007-06-27  Lillian Angel  <langel@redhat.com>
+
+	* patches/icedtea-ports.patch: Removed ChangeLog entry.
+
+2007-06-27  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am: Added to ICEDTEA_COPY_DIRS and ICEDTEA_COPY_SRC
 	* Makefile.in: Regenerated.
